INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../lib
  ${CMAKE_CURRENT_BINARY_DIR}/..)

CHECK_FUNCTION_EXISTS(getopt HAVE_GETOPT)
IF(NOT HAVE_GETOPT)
  SET(SRC_EXTRA_FILES getopt.c)
ENDIF(NOT HAVE_GETOPT)

ADD_EXECUTABLE(zipcmp zipcmp.c ${SRC_EXTRA_FILES})
#TARGET_LINK_LIBRARIES(zipcmp zip)
target_link_libraries(zipcmp ${ZLIB_LIBRARY})
#INSTALL(TARGETS zipcmp RUNTIME DESTINATION bin)
INSTALL(TARGETS zipcmp RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})

ADD_EXECUTABLE(zipmerge zipmerge.c ${SRC_EXTRA_FILES})
#TARGET_LINK_LIBRARIES(zipmerge zip)
TARGET_LINK_LIBRARIES(zipmerge ${LIB_NAME})
#INSTALL(TARGETS zipmerge RUNTIME DESTINATION bin)
INSTALL(TARGETS zipmerge RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})

ADD_EXECUTABLE(ziptorrent ziptorrent.c ${SRC_EXTRA_FILES})
#TARGET_LINK_LIBRARIES(ziptorrent zip)
TARGET_LINK_LIBRARIES(ziptorrent ${LIB_NAME})
#INSTALL(TARGETS ziptorrent RUNTIME DESTINATION bin)
INSTALL(TARGETS ziptorrent RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
